Fix project section header overlap at medium viewport widths.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -615,13 +615,12 @@ a:hover {
   width: 25%;
   padding: 0 30px 0 0;
   min-width: 100px;
-
 }
 
 .project-col2 {
   float: left;
   width: 75%;
-  min-width: 400px;
+  min-width: 0;
 }
 
 .project-section {
@@ -710,6 +709,16 @@ h1 {
   font-size: 2.8em;
 }
 
+.project-col1 {
+  width: 100%;
+  padding: 0 0 8px 0;
+}
+
+.project-col2 {
+  width: 100%;
+  min-width: 0;
+}
+
 .hero-content {
   padding-top: 60px;
   padding-bottom: 130px;
@@ -771,12 +780,12 @@ h1 {
 
    .project-col1 {
      width: 100%;
-     padding: 0 30px 0 0;
+     padding: 0 0 8px 0;
    }
 
    .project-col2 {
      width: 100%;
-     min-width: 200px;
+     min-width: 0;
    }
 
    .project-header {
